--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250407185215">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250408175305">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,26 +63,28 @@
 					</div>
 					<div class="hero__right">
 						<div class="hero__img"><img src="img/hero-img.webp" alt="img" /></div>
-						<div class="hero-personal">
-							<div class="hero-personal__avatars">
-								<div class="hero-personal__avatar">
-									<img src="img/avatars/avatar-1.webp" alt="avatar" />
+						<div class="hero__personal">
+							<div class="hero-personal">
+								<div class="hero-personal__avatars">
+									<div class="hero-personal__avatar">
+										<img src="img/avatars/avatar-1.webp" alt="avatar" />
+									</div>
+									<div class="hero-personal__avatar">
+										<img src="img/avatars/avatar-2.webp" alt="avatar" />
+									</div>
+									<div class="hero-personal__avatar">
+										<img src="img/avatars/avatar-3.webp" alt="avatar" />
+									</div>
+									<div class="hero-personal__avatar">
+										<img src="img/avatars/avatar-4.webp" alt="avatar" />
+									</div>
+									<div class="hero-personal__avatar">
+										<img src="img/avatars/avatar-5.webp" alt="avatar" />
+									</div>
 								</div>
-								<div class="hero-personal__avatar">
-									<img src="img/avatars/avatar-2.webp" alt="avatar" />
+								<div class="hero-personal__text">
+									<p>1723+ Kunden <b>verpackt.</b></p>
 								</div>
-								<div class="hero-personal__avatar">
-									<img src="img/avatars/avatar-3.webp" alt="avatar" />
-								</div>
-								<div class="hero-personal__avatar">
-									<img src="img/avatars/avatar-4.webp" alt="avatar" />
-								</div>
-								<div class="hero-personal__avatar">
-									<img src="img/avatars/avatar-5.webp" alt="avatar" />
-								</div>
-							</div>
-							<div class="hero-personal__text">
-								<p>1723+ Kunden <b>verpackt.</b></p>
 							</div>
 						</div>
 						<div class="hero-block">
@@ -110,9 +112,276 @@
 					</div>
 				</div>
 			</section>
+			<section class="clients">
+				<div class="clients__container">
+					<div class="clients__inner">
+						<div class="clients__img">
+							<img src="img/section-2.webp" alt="clients" />
+						</div>
+						<div class="clients__content">
+							<h3 class="clients__title">
+								Unsere Kunden haben individuelle Ansprüche. Sie erzählen uns
+								folgendes:
+							</h3>
+							<ul class="clients__list">
+								<li class="client-item">
+									<div class="client-item__icon">
+										<img src="img/clients/decor-1.svg" alt="decor" />
+									</div>
+									<p>
+										Sie haben ein sehr <b>spezielles Produkt</b> und können daher
+										nicht “irgendjemanden” mit der Verpackung beauftragen.
+									</p>
+								</li>
+								<li class="client-item">
+									<div class="client-item__icon">
+										<img src="img/clients/decor-2.svg" alt="decor" />
+									</div>
+									<p>
+										Sie kennen sich mit ihren Produkten bestens aus, sind sich aber
+										<b>noch unsicher welche Verpackungslösung die beste ist.</b> Sie
+										wissen: Die Verpackung verkauft ihr Produkt.
+									</p>
+								</li>
+								<li class="client-item">
+									<div class="client-item__icon">
+										<img src="img/clients/decor-3.svg" alt="decor" />
+									</div>
+									<p>
+										Sie haben schlechte Erfahrungen gemacht mit ihren vorherigen
+										Lieferanten und waren
+										<b>
+											unglücklich mit der Kommunikation, Absprachen die nicht
+											eingehalten wurden und Qualität die nicht stimmte.
+										</b>
+									</p>
+								</li>
+								<li class="client-item">
+									<div class="client-item__icon">
+										<img src="img/clients/decor-4.svg" alt="decor" />
+									</div>
+									<p>Sie stehen <b>unter Zeitdruck.</b></p>
+								</li>
+								<li class="client-item">
+									<div class="client-item__icon">
+										<img src="img/clients/decor-5.svg" alt="decor" />
+									</div>
+									<p>
+										Sie wollen einen <b>angemessenen Preis zahlen, nicht zu viel.</b>
+									</p>
+								</li>
+								<li class="client-item">
+									<div class="client-item__icon">
+										<img src="img/clients/decor-6.svg" alt="decor" />
+									</div>
+									<p>
+										Sie haben das Gefühl, dass ihr vorheriger Ansprechpartner
+										<b>nicht die Gleiche Leidenschaft</b> mitgebracht hat für ihr
+										Produkt wie sie es selbst haben.
+									</p>
+								</li>
+								<li class="client-item">
+									<div class="client-item__icon">
+										<img src="img/clients/decor-7.svg" alt="decor" />
+									</div>
+									<p>
+										Sie haben die Flexibilität vermisst. Sie mussten
+										<b>Mindestabnahmemengen</b> in Kauf nehmen und hatten
+										<b>keinen indiviuellen Ansprechpartner</b>, der sich um sie
+										kümmert.
+									</p>
+								</li>
+							</ul>
+							<div class="clients__text">
+								<p>
+									Das machen wir für unsere Kunden anders. <br />
+									<b>Wie genau?</b> Zeigen wir Ihnen jetzt.
+								</p>
+							</div>
+							<button class="button" type="button">
+								Wir brauchen eine individuelle Verpackung
+							</button>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<section class="packaging">
+				<div class="packaging__container">
+					<div class="packaging__inner">
+						<div class="packaging__head">
+							<h2 class="packaging__title">
+								Was macht die entstehung einer guten verpackung aus?
+							</h2>
+						</div>
+						<div class="packaging__body">
+							<ol class="packaging__list">
+								<li class="packaging-item">
+									<span class="packaging-item__decor-line"></span>
+									<h5 class="packaging-item__title">Wir hören ganz genau zu.</h5>
+									<div class="packaging-item__text">
+										<p>
+											Am Anfang steht das Zuhören. Ein guter Verpackungshersteller
+											nimmt sich die Zeit, Ihre spezifischen Anforderungen genau zu
+											verstehen. Was muss die Verpackung leisten? Welches Produkt soll
+											sie schützen? Welche besonderen Anforderungen gibt es
+											hinsichtlich Haltbarkeit, Transport oder Lagerung?
+										</p>
+									</div>
+									<div class="packaging-item__result">
+										<b>Ergebnis: </b>
+										<p>
+											Sie erhalten von uns ein klar definiertes Anforderungsprofil für
+											Ihre Verpackung, das alle notwendigen Spezifikationen und
+											Rahmenbedingungen enthält. Wir haben ein tiefes Verständnis für
+											Ihre Ziele und Herausforderungen entwickelt.
+										</p>
+									</div>
+								</li>
+								<li class="packaging-item">
+									<span class="packaging-item__decor-line"></span>
+									<h5 class="packaging-item__title">
+										Sie sind individuell. Wir arbeiten individuell.
+									</h5>
+									<div class="packaging-item__text">
+										<p>
+											Standardlösungen gibt es viele, aber die beste Verpackung ist
+											die, die maßgeschneidert ist. Wir sind in der Lage, eine
+											Verpackung zu entwickeln, die exakt auf Ihr Produkt
+											zugeschnitten ist. Das kann bedeuten, spezielle Materialien
+											auszuwählen, die richtigen Barriereeigenschaften zu
+											berücksichtigen oder eine ganz neue Verpackungslösung zu
+											entwickeln.  
+										</p>
+									</div>
+									<div class="packaging-item__result">
+										<b>Ergebnis: </b>
+										<p>
+											Sie erhalten von uns ein oder mehrere Designvorschläge, die auf
+											Ihr Anforderungsprofil zugeschnitten sind. Die Auswahl der
+											optimalen Materialien und Technologien für Ihre Verpackung wird
+											von uns getroffen.
+										</p>
+									</div>
+								</li>
+								<li class="packaging-item">
+									<span class="packaging-item__decor-line"></span>
+									<h5 class="packaging-item__title">Wir hören ganz genau zu.</h5>
+									<div class="packaging-item__text">
+										<p>
+											Am Anfang steht das Zuhören. Ein guter Verpackungshersteller
+											nimmt sich die Zeit, Ihre spezifischen Anforderungen genau zu
+											verstehen. Was muss die Verpackung leisten? Welches Produkt soll
+											sie schützen? Welche besonderen Anforderungen gibt es
+											hinsichtlich Haltbarkeit, Transport oder Lagerung? 
+										</p>
+									</div>
+									<div class="packaging-item__result">
+										<b>Ergebnis: </b>
+										<p>
+											Sie erhalten von uns ein klar definiertes Anforderungsprofil für
+											Ihre Verpackung, das alle notwendigen Spezifikationen und
+											Rahmenbedingungen enthält. Wir haben ein tiefes Verständnis für
+											Ihre Ziele und Herausforderungen entwickelt.
+										</p>
+									</div>
+								</li>
+							</ol>
+							<div class="packaging__bottom">
+								<a class="button" href="#">Wir brauchen eine individuelle Verpackung</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="brand" data-watch>
+				<div class="brand__container">
+					<div class="brand__head">
+						<h2 class="brand__title title">Ihre Neue Verpackung:</h2>
+					</div>
+					<div class="brand__body">
+						<div class="brand-block">
+							<div class="brand-block__packs">
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-1.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-2.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-3.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-4.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-5.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-6.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-7.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-8.webp" alt="pack" />
+								</div>
+								<div class="brand-block__pack">
+									<img src="img/brand-pack/pack-9.webp" alt="pack" />
+								</div>
+							</div>
+							<div class="brand-block__personal">
+								<div class="hero-personal hero-personal--round">
+									<div class="hero-personal__avatars">
+										<div class="hero-personal__avatar">
+											<img src="img/avatars/avatar-1.webp" alt="avatar" />
+										</div>
+										<div class="hero-personal__avatar">
+											<img src="img/avatars/avatar-2.webp" alt="avatar" />
+										</div>
+										<div class="hero-personal__avatar">
+											<img src="img/avatars/avatar-3.webp" alt="avatar" />
+										</div>
+										<div class="hero-personal__avatar">
+											<img src="img/avatars/avatar-4.webp" alt="avatar" />
+										</div>
+										<div class="hero-personal__avatar">
+											<img src="img/avatars/avatar-5.webp" alt="avatar" />
+										</div>
+									</div>
+									<div class="hero-personal__text">
+										<p>1723+ Kunden <b>verpackt.</b></p>
+									</div>
+								</div>
+							</div>
+							<div class="brand-block__title title">Individuell, wie ihr Produkt.</div>
+							<div class="brand-block__counters">
+								<div class="brand-counter">
+									<div class='brand-counter__num'><span data-digits-counter>3000000</span> +</div>
+									<div class="brand-counter__text">
+										Individuelle Verpackungen produziert.
+									</div>
+								</div>
+								<div class="brand-counter">
+									<div class='brand-counter__num'><span data-digits-counter>25</span> +</div>
+									<div class="brand-counter__text">Jahre gruber folien</div>
+								</div>
+								<div class="brand-counter">
+									<div class='brand-counter__num'><span data-digits-counter>500</span> +</div>
+									<div class="brand-counter__text">Unternehmen betreut.</div>
+								</div>
+							</div>
+							<div class="brand-block__bottom">
+								<a class="button button--light" href="#">Wir sind individuell. Wir brauchen individuelle beratung.</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		</main>
 	</div>
-	<script src="js/app.min.js?_v=20250407185215"></script>
+	<script src="js/app.min.js?_v=20250408175305"></script>
 </body>
 
 </html>
