--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	<meta charset="UTF-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css?_v=20250418155527" />
-	<link rel="stylesheet" href="css/style.min.css?_v=20250418155527" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css?_v=20250418160409" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20250418160409" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -1602,15 +1602,15 @@
 
 		</main>
 	</div>
-	<div id="video-modal">
+	<div id="video-modal" style='display: none;'>
 		<div class="video-content">
 			<iframe src="https://www.youtube.com/embed/tZjROYFI4oA?si=oIE7YmScaf1vhUpb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 		</div>
 	</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js?_v=20250418155527"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js?_v=20250418160409"></script>
 
-	<script src="js/app.min.js?_v=20250418155527"></script>
+	<script src="js/app.min.js?_v=20250418160409"></script>
 	<script>
 		Fancybox.bind('[data-fancybox]', {
 			// Your custom options
